--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,25 @@ formatting-functions.php
 Appeal-Postcard.zip
 *.psd
 *.zip
+SRC-REMix-04.mp4
+donate.mp4
+45th-anniversary.mov
+videos/01-Processional-2012.m4v
+videos/02-EmilyFisher-PeterLaipson-2012.m4v
+videos/03-PhilipLevine-2012.m4v
+videos/04-AssociateOfArtSpeaker-2012.m4v
+videos/05-BachelorOfArtSpeaker-2012.m4v
+videos/06-AcademicAwards-2012.m4v
+videos/07-JohnAGloverAward-2012.m4v
+videos/08-RuthBIdeAward-2012.m4v
+videos/09-RichardDrumAward-2012.m4v
+videos/10-LeonBotstein-2012.m4v
+videos/11-AAGrads-2012.m4v
+videos/12-BAGrads-2012.m4v
+videos/45th-anniversary.jpg
+videos/donate.flv
+videos/donate.jpg
+videos/reunion-video.jpg
+videos/ReUnion-WholeWeekend-04.m4v
+videos/SR-Student-Donate-Video-111513_1.flv
+videos/SR-Student-Donate-Video-111513_1.jpg
